[package]
name = "vanity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "3", features = ["derive"] }
ethereum-types = "0.12"
hex = "0.4"
hex-literal = "0.3"
num_cpus = "1"
once_cell = "1"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-keccak = { version = "2", features = ["keccak"] }
